--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <li>✅ Receitas modificadas</li>
             <li>✅ Lucky Pixelmon aprimorado</li>
         </ul>
-        <a href="#" class="button">Baixar Modpack</a>
-        <a href="#" class="button">Documentação</a>
-        <a href="#" class="button">GitHub</a>
+        <a href="https://github.com/yFarofa/PixelLabs/releases" class="button">Baixar Modpack</a>
+        <a href="https://github.com/yFarofa/PixelLabs" class="button">Documentação</a>
+        <a href="https://github.com/yFarofa/PixelLabs" class="button">GitHub</a>
     </div>
 </body>
 </html>
